feat(task): Implement service layer logic to retrieve user tasks